Update layout.md