@@ -1,1 +1,8 @@
 
+Done this in Eclipse IDE
+REMEMBER TO THESE:
+1- add javafx libraries in ur package folder.. for this .. right click package folder->build path->config build path->select modular->add lib.
+2- add jdbc jar file using the same above process.
+
+TO RUN:
+run->run config->add vm arguments(--module-path "P:\openjfx-21_windows-x64_bin-sdk\javafx-sdk-21\lib" --add-modules javafx.controls,javafx.fxml).
